# menda-plasma-next

./: README.md
menda-plasma-desktop/: PKGBUILD
menda-plasma-desktop/Menda/: colors
menda-plasma-look-feel/: PKGBUILD
menda-plasma-look-feel/org.kde.menda.desktop/: metadata.desktop
menda-plasma-look-feel/org.kde.menda.desktop/contents/: defaults
menda-plasma-look-feel/org.kde.menda.desktop/contents/loginmanager/: metadata.desktop  theme.conf
menda-plasma-look-feel/org.kde.menda.desktop/contents/splash/images/: kde.svgz
menda-sddm/: PKGBUILD
menda-sddm/menda/: Main.qml  metadata.desktop
menda/menda/: .directory  CMakeLists.txt
menda/menda-git-pkgbuild/: .AURINFO  PKGBUILD
menda/menda-kde4-git-pkgbuild/: .AURINFO  PKGBUILD
menda/menda/cursors/: CMakeLists.txt
menda/menda/cursors/cursors/: bottom_left_corner  bottom_right_corner  cross  crossed_circle  forbidden  hand1  left_ptr  left_ptr_help  plus  sb_h_double_arrow  sb_v_double_arrow  size_all  split_h  split_v  watch  xterm
menda/menda/cursors/src/: .directory
menda/menda/cursors/src/raw/: .directory
menda/menda/cursors/src/raw/output/: .directory
menda/menda/icons/: CMakeLists.txt
menda/menda/icons-square/: CMakeLists.txt
menda/menda/icons-square/actions/scalable/: mail-encrypted-full.svgz  mail-encrypted.svgz  mixer-master.svgz
menda/menda/icons-square/apps/scalable/: libreoffice4.2-startcenter
menda/menda/icons/actions/scalable/: mail-encrypted-full.svgz  mail-encrypted.svgz  mixer-master.svgz
menda/menda/icons/apps/48x48/apps/: libreoffice4.2-startcenter
menda/menda/icons/apps/scalable/: apps  libreoffice4.2-startcenter
menda/menda/kdecoration/: CMakeLists.txt  mendabutton.cpp  mendabutton.h  mendadecoration.cpp  mendadecoration.h  mendasettingsprovider.cpp  mendasizegrip.cpp
menda/menda/kdecoration/config/: mendaconfigwidget.cpp  mendaconfigwidget.h  mendadecorationconfig.desktop  mendadetectwidget.cpp  mendaexceptiondialog.cpp  mendaexceptionlistwidget.cpp
menda/menda/kdecoration/config/ui/: mendaconfigurationui.ui  mendaexceptionlistwidget.ui
menda/menda/kstyle/: CMakeLists.txt  menda.h  menda.kcfg  menda.themerc  mendaaddeventfilter.cpp  mendaframeshadow.cpp  mendahelper.cpp  mendamdiwindowshadow.cpp  mendamnemonics.cpp  mendapalettehelper.cpp  mendapalettehelper.h  mendashadowhelper.cpp  mendasplitterproxy.cpp  mendasplitterproxy.h  mendastyle.cpp  mendastyle.h  mendastyleplugin.cpp  mendastyleplugin.h  mendatileset.h  mendawindowmanager.cpp  mendawindowmanager.h
menda/menda/kstyle/animations/: mendaanimation.cpp  mendaanimationdata.cpp  mendaanimations.cpp  mendaanimations.h  mendabaseengine.cpp  mendabusyindicatordata.cpp  mendabusyindicatorengine.cpp  mendadialdata.cpp  mendadialengine.cpp  mendaenabledata.cpp  mendagenericdata.cpp  mendaheaderviewdata.cpp  mendaheaderviewdata.h  mendascrollbardata.cpp  mendascrollbarengine.cpp  mendaspinboxdata.cpp  mendaspinboxengine.cpp  mendatabbardata.cpp  mendatabbarengine.cpp  mendatoolboxengine.cpp  mendatoolboxengine.h  mendawidgetstatedata.cpp  mendawidgetstateengine.cpp
menda/menda/kstyle/config/: CMakeLists.txt  main.cpp  mendastyleconfig.cpp  mendastyleconfig.desktop  mendastyleconfig.h  mendastyleconfigmodule.cpp  mendastyleconfigmodule.h  sc-apps-menda-settings.svgz
menda/menda/kstyle/config/ui/: mendastyleconfig.ui
menda/menda/kstyle/debug/: mendawidgetexplorer.cpp
menda/menda/misc/gtkmenda/: gtkmenda.upd  main.cpp
menda/menda/misc/kde4menda/src/: kde4menda.upd  main.cpp
menda/menda/wallpapers/Menda/: metadata.desktop
menda/menda/wallpapers/Menda/contents/: screenshot
menda/menda/windec/: CMakeLists.txt
menda/menda/windec/package/: metadata.desktop
menda/menda/windec/package/contents/ui/: main.qml
menda/menda/windec/svg/Breeze-Light-0.036/: metadata.desktop
menda/menda/windec/svg/Menda/: metadata.desktop
